<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:paddingVertical="30dp"
        android:layout_gravity="center"
        android:background="@drawable/box_custom_dialog"
        android:clickable="true"
        android:elevation="5dp">

    <TextView
            android:id="@+id/dialog_diary2_leave_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_semi_bold"
            android:text="@string/dialog_day_book_tv_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textAlignment="center"
            android:includeFontPadding="false"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <TextView
            android:id="@+id/dialog_diary2_leave_tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_regular"
            android:text="@string/dialog_day_book_tv_subtitle"
            android:textColor="@color/brownGray"
            android:textSize="12sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:includeFontPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_diary2_leave_tv_title" />


    <TextView
            android:id="@+id/dialog_day_book_btn_cancel"
            android:layout_width="55dp"
            android:layout_height="30dp"
            android:background="@drawable/box_custom_dialog_gray_button"
            android:fontFamily="@font/noto_sans_regular"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:visibility="visible"
            android:layout_marginTop="20dp"
            android:includeFontPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dialog_day_book_btn_delete_comment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_diary2_leave_tv_subtitle" />

    <!--       foreground ~ : 클릭했을 때 효과를 준다-->
    <TextView
            android:id="@+id/dialog_day_book_btn_delete_comment"
            android:layout_width="55dp"
            android:layout_height="30dp"
            android:background="@drawable/box_custom_dialog_red_button"
            android:fontFamily="@font/noto_sans_regular"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/check"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:visibility="visible"
            android:layout_marginTop="20dp"
            android:includeFontPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dialog_day_book_btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/dialog_diary2_leave_tv_subtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>