<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/diary2_invite_member_iv_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/icn_back"/>
    <TextView
        android:id="@+id/diary2_invite_member_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="33dp"
        android:text="@string/dialog_diary2_more_tv_invite_member"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/noto_sans_semi_bold"
        android:includeFontPadding="false"/>

    <EditText
        android:id="@+id/diary2_invite_member_et_input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/diary2_search_box"
        app:layout_constraintTop_toBottomOf="@id/diary2_invite_member_tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="22dp"
        android:hint="@string/diary2_invite_et_input_email"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:textSize="11sp"
        android:maxLines="1"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:paddingStart="14dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/diary2_invite_member_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/diary2_invite_member_et_input_email"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="24dp"/>

    <TextView
        android:id="@+id/diary2_invite_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/diary2_background_empty_content"
        android:text="@string/diary2_email_error"
        android:textSize="11sp"
        android:fontFamily="@font/noto_sans_regular"
        android:gravity="center"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>