<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/box_custom_dialog"
    android:clickable="true"
    android:paddingVertical="27dp"
    android:elevation="5dp">

    <TextView
        android:id="@+id/dialog5_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_semi_bold"
        android:text="@string/sign_up_login_dialog_check"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/dialog5_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:fontFamily="@font/noto_sans_regular"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/sign_up_login_dialog_check_sub"
        android:textSize="12sp"
        android:textColor="@color/brownGray"
        app:layout_constraintBottom_toTopOf="@id/dialog5_btn_access"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog5_title"
        />

    <TextView
        android:id="@+id/dialog5_btn_cancel"
        android:layout_width="55dp"
        android:layout_height="30dp"
        android:background="@drawable/box_custom_dialog_red_button"
        android:fontFamily="@font/noto_sans_regular"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="취소"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog5_btn_access"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog5_subtitle" />

    <!--       foreground ~ : 클릭했을 때 효과를 준다-->
    <TextView
        android:id="@+id/dialog5_btn_access"
        android:layout_width="55dp"
        android:layout_height="30dp"
        android:background="@drawable/box_custom_dialog_gray_button"
        android:fontFamily="@font/noto_sans_regular"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/check"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/dialog5_btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog5_btn_cancel"
        app:layout_constraintTop_toTopOf="@id/dialog5_btn_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>