<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.main.friends.BeingTogetherFragment">

    <ImageView
        android:id="@+id/friends_being_together_iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/icn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/diary2_invite_member_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/noto_sans_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/friends_tv_invite_members"
        android:textColor="@color/black"
        android:textFontWeight="600"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/friends_invite_member_et_input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/friends_search_box"
        android:fontFamily="@font/noto_sans_regular"
        android:hint="@string/friends_invite_et_input_email"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="14dp"
        android:textColor="@color/black"
        android:textColorHint="@color/brownGray"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diary2_invite_member_tv_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friends_invite_member_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friends_invite_member_et_input_email"
        />

    <TextView
        android:id="@+id/diary2_invite_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/diary2_background_empty_content"
        android:fontFamily="@font/noto_sans_regular"
        android:gravity="center"
        android:text="@string/diary2_email_error"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/friends_invite_member_recycler_view" />

</androidx.constraintlayout.widget.ConstraintLayout>