<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="32dp">


    <ImageView
        android:id="@+id/diary2_iv_logo"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/logo_en"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/diary_tv_title"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/noto_sans"
        android:gravity="center_vertical"
        android:text="@string/diary_tv_title"
        android:textColor="#27544C"
        android:textFontWeight="700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/diary_btn_alone"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="129dp"
        android:background="@drawable/diary_btn_background"
        android:textColor="@drawable/diary_btn_color"
        android:fontFamily="@font/noto_sans"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/diary_btn_alone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/diary_btn_together"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="129dp"
        android:background="@drawable/diary_btn_background"
        android:textColor="@drawable/diary_btn_color"
        android:text="@string/diary_btn_together"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/diary_rv"
        android:layout_width="360dp"
        android:layout_height="500dp"
        android:layout_marginBottom="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/icon_diary_add"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="116dp"
        android:elevation="5dp"
        android:background="@drawable/icn_diary_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>