<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:paddingTop="32dp">

    <ImageView
        android:id="@+id/diary2_iv_logo"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/logo_en"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/diary_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/noto_sans_bold"
            android:includeFontPadding="false"
            android:gravity="center_vertical"
            android:textColor="#27544C"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <android.widget.Button
            android:id="@+id/diary_btn_together"
            android:layout_width="70dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_btn"
            android:fontFamily="@font/noto_sans_regular"
            android:text="@string/diary_btn_together"
            android:textColor="@drawable/diary_btn_color"
            android:textSize="15sp"
            android:includeFontPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/diary_tv_title" />

    <android.widget.Button
            android:id="@+id/diary_btn_alone"
            android:layout_width="70dp"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_btn"
            android:fontFamily="@font/noto_sans_regular"
            android:text="@string/diary_btn_alone"
            android:textColor="@drawable/diary_btn_color"
            android:textSize="15sp"
            android:includeFontPadding="false"
            app:layout_constraintStart_toEndOf="@id/diary_btn_together"
            app:layout_constraintTop_toBottomOf="@id/diary_tv_title" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/diary_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/item_diary"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/diary_btn_together"/>

    <FrameLayout
            android:id="@+id/diary_fl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/diary_btn_together"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="150dp">

        <ImageView
                android:layout_gravity="center|center"
                android:id="@+id/diary_iv_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/diary2_background_empty_content" />

        <TextView
                android:id="@+id/diary_tv_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center"
                android:text="@string/diary_tv_none"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="11sp"/>
    </FrameLayout>



    <android.widget.Button
        android:id="@+id/icon_diary_add"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:background="@drawable/icn_diary_plus"
        android:layout_marginBottom="20dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>